# tutor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: build_and_deploy.yml  codeql.yml  deploy.yml  docker-publish.yml  main_intranet-codaqui.yml
codaqui/: admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
core/: urls.py  views.py
discord_service/: admin.py  apps.py  auth.py  models.py  views.py
discord_service/migrations/: 0001_initial.py
github_service/: auth.py  urls.py  views.py
managecommands/: apps.py
ollama/: Dockerfile  Modelfile  entrypoint.sh
student/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
student/migrations/: 0001_initial.py  0002_rename_create_at_student_created_at_and_more.py  0002_student_user.py  0003_rename_age_student_birth_year.py  0004_alter_student_user.py  0005_student_is_active.py
templates/: base.html
templates/core/: index.html
templates/github_service/: comments_issue.html  list_issues.html  view_issue.html
templates/student/: student_form.html
users/: admin.py  apps.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: models.py
wallet/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
whatsapp_api/: .gitignore  Dockerfile  README.md  connection-manager.js  index.js  mongoAuthState.js  package-lock.json  package.json  postgresAuthState.js
whatsapp_app/: Dockerfile  main.py
whatsapp_messages/: admin.py  apps.py  models.py
(+26 files in other folders)
